--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,10 +23,10 @@
 		{{ end -}}
 
 		<!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-        <link rel="manifest" href="favicon/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://www.putusudarma.com/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://www.putusudarma.com/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://www.putusudarma.com/favicon/favicon-16x16.png">
+        <link rel="manifest" href="https://www.putusudarma.com/favicon/site.webmanifest">
 
 		<!-- RSS -->
 		<link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
