--- a/layouts/partials/index/introduction.html
+++ b/layouts/partials/index/introduction.html
@@ -3,4 +3,4 @@ This is a placeholder partial for the introduction. Create a file called
 layouts/partials/index/introduction.html in your own site to overwrite this
 placeholder.
 -->
-<p style="text-align: center;margin-block-start: 1em;margin-block-end: 1em;">Just a healthy normal man. Web Developer. Love to play guitar and do some parkour. Songwriter and music producer wannabe! Currently 2/34 on my <a href="https://www.putusudarma.com/misimerahputih">misimerahputih</a>.<br />These are my train of thoughts.</p>
+<p style="text-align: center;margin-block-start: 1em;margin-block-end: 1em;">Just a healthy normal man. Web Developer. Love to play guitar and do some parkour. Songwriter and music producer wannabe. Currently 2/34 on my <a href="https://www.putusudarma.com/misimerahputih">misimerahputih</a>.<br />These are my train of thoughts.</p>
